Fixed CSS for word-wrapping and removed uneccessary typing

--- a/src/styles/components/buttons/_buttons.scss
+++ b/src/styles/components/buttons/_buttons.scss
@@ -154,6 +154,7 @@ a.buttonCTA {
   font-size: 0.9vw;
   line-height: normal;
   margin: 10px; padding: 15px;
-  text-align: left;
   max-width: 60%;
+  text-align: left;
+  word-wrap: break-word;
 }
